--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <form action="https://formsubmit.co/ko7809023@gmail.com" method="POST">
+    
+        <form action="https://formsubmit.co/el/yacuya" method="POST">
             <h2>HTML</h2>
-            <input type="text" name="Fullname" required><br>
-            <input type="email" name="Email" required><br>
-            <select name="color">
-                <option>BLUE</option>
-                <opion>RED</opion>
-                <option>GREEN</option>
-                <option>YELLOW</option>
+            <input type="text" name="Fullname" placeholder="Enter Name" required><br>
+            <input type="email" name="Email" placeholder="Enter Email" required><br>
+            <select name="location" >
+                <option>Mindanao</option>
+                <option>Visayas</opion>
+                <option>Luzon</option>
+                
             </select>
             <br>
             <textarea name="Message" placeholder="Message" required></textarea>
+            <br>
             <button type="submit">SUBMIT</button>
         </form>
     </div>
